# litdb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FROMTEXT_USAGE.md  LICENSE  README.org  REFACTORING_PLAN.md  SKILL.md  TESTING.md  deep-research.org  features.org  litdb-jupyterlab.ipynb  litdb.el  pyproject.toml  swagger.json  test_fromtext.sh
.github/workflows/: build.yml  test.yml
litdb/: __init__.py  bibtex.py  cli.py  coa.py  db.py  gpt.py  lab.py  openalex.py  pdf.py  utils.py
sandbox/box.com/: .env  litdb-box.py
src/litdb/: 0000-0003-2625-9232-2025-02-18.xlsx  __init__.py  app.py  audio.py  bibtex.py  chat.py  cli.py  coa.py  crawl.py  db.py  doe_collaborators.py  extract.py  gpt.py  images.py  lsearch.py  mcp.py  mcp_server.py  research.py  server.py  summary.py  utils.py  youtube.py
src/litdb.egg-info/: PKG-INFO  SOURCES.txt
src/litdb/commands/: __init__.py  data_processing.py  export.py  filters.py  install.py  manage.py  openalex_commands.py  research_commands.py  review.py  search.py  tags.py  utilities.py
tests/: CLI_TEST_PLAN.md  README.md  __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli_core.py  test_cli_export.py  test_cli_filters.py  test_cli_install.py  test_cli_manage.py  test_cli_new_features.py  test_cli_openalex.py  test_cli_research.py  test_cli_review.py  test_cli_search.py  test_cli_tags.py  test_extract.py  test_openalex_api.py  test_summary.py  test_utils.py
