[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "litdb.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "litdb"
dynamic = ["version"]
authors = [
  {name = "John Kitchin", email = "jkitchin@andrew.cmu.edu"},
]
maintainers = [
  {name = "John Kitchin", email = "jkitchin@andrew.cmu.edu"}
]
description = "A literature database tool with GPT integration."
license = {text = "MIT License"}
readme = {file = "README.org", content-type = "text/plain"}
dependencies = [
  "toml",
  "tomlkit",
  "requests",
  "pymupdf4llm",
  "langchain",
  "tqdm",
  "libsql-experimental",
  "sentence-transformers",
  "click",
  "rich",
  "beautifulsoup4",
  "ratelimit",
  "python-docx",
  "python-pptx",
  "nbconvert",
  "nbformat",
  "ollama",
  "dateparser",
  "jinja2",
  "pytesseract",
  "pillow",
  "bibtexparser",
  
#  "pyaudio",
#  "playsound",
#  "SpeechRecognition",

  # for coa
  "pandas",
  "more-itertools",
  "nameparser",
  "tabulate",
  "IPython"
]

[project.scripts]
litdb = "litdb.cli:cli"